# github_crawler

./: .env.dev.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: pipeline.yml
alembic/: env.py
alembic/versions/: initial_migration.py
app/: main.py
app/api/v1/: __init__.py  dependencies.py  routes.py  schemas.py
app/api/v1/endpoints/: repository.py
app/core/: config.py
app/domain/models/: repository.py
app/domain/repositories/: github_repository.py  repo_repository.py
app/infrastructure/database/: base.py  models.py  repositories.py  session.py
app/infrastructure/github_api/: client.py
app/use_cases/: repository_usecase.py
app/workers/: celery_app.py  tasks.py
scripts/: crawl.py  export_db.py
