[project]
name = "github_crawler"
version = "0.1.0"
description = "Github Crawler using Github Graphql API"
authors = [
    {name = "Sohail Ahmad"},
]

requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "pydantic>=2.11",
    "python-dotenv>=1.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.10",
    "alembic>=1.15",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "celery>=5.3.6",
    "redis>=5.0.1",
]

[dependency-groups]

prod = [
    "gunicorn>=21.2,<22.0",
]

dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "ruff>=0.12.11",
    "mypy>=1.17.1",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.extend-select = ["I"]
fix = true

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-single-line = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
